# Heartless

./: .clang-format  .gitignore  CMakeLists.txt  Heartless_en_US.ts  README.md
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
qml/: AboutPage.qml  AnimType.qml  Balloon.qml  Fountain.qml  HistoryPage.qml  ICONS.md  MainPage.qml  MultiStyleEmitter.qml  SettingsPage.qml  main.qml
qml/Game/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h
src/: main.cpp
